<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:padding="15dp">
    <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="0.6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/server_url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/server"
            android:paddingTop="5dp"
            android:paddingBottom="4dp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/driver_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/driver_id"
            android:paddingTop="5dp"
            android:paddingBottom="4dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/driver_id"
            android:inputType=""
            android:maxLines="1"
            android:numeric="integer"
            android:layout_gravity="bottom" />
        <Button
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/login"
            android:layout_gravity="right"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>