<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/stateHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="7dp"
                android:text="@string/status"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="27sp" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/gps_status_label"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:singleLine="true"
                            android:text="@string/gps"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/gps_status"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:singleLine="false"
                            android:text="@string/unknown"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/busy_status_label"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:singleLine="true"
                            android:text="@string/connectivity"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/busy_status"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:singleLine="false"
                            android:text="@string/unknown"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="5dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:singleLine="true"
                            android:text="@string/driver_status"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:singleLine="false"
                            android:text="@string/unknown"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>

                </TableRow>

            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/actionsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:singleLine="true"
                android:text="@string/actions"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="27sp" />

            <Button
                android:id="@+id/busyBtn"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/busy" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>